2015-10-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (group [details], role [details])
	(user [details]): Add permissions window.

	* src/html/classic/gsad.xsl (html-gsa-logo): Apply indicator icons for
	new permissions windows.

2015-10-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (report [results]): Correct typo.

2015-10-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (report [vulns]): When there are notes and
	overrides add icons that link to the notes and overrides pages.

2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (gsad_address_init): Check if IPv6 is supported when
	setting default listening address.

2015-10-06  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (export_many): Use correct subtype parameter name
	"asset_type" for assets.

2015-10-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Adapt to lsc_credentials now being named credentials. Use new
	credential types and show them in the credentials table and details.

	* src/gsad_omp.c: Change "lsc_credential" in commands for the
	credentials type and corresponding functions to "credential".

	* src/gsad_omp.h: Change function names as above.

	* src/gsad.c (init_validator): Change "lsc_credential" in commands
	and params for the credentials type to "credential". Update regular
	expressions for types to use "credential" instead of "lsc_credential".
	(exec_omp_post, exec_omp_get): Change "lsc_credential" to "credential".

	* src/html/classic/gsad.xsl: Match response elements for "credential"
	instead of "lsc_credential" for indicator. Change GET_LSC_CREDENTIALS
	to GET_CREDENTIALS.

	* src/html/classic/help.xsl: Rename "lsc_credential" pages to
	"credential".

	* src/html/classic/omp.xsl: Rename "lsc_credential" commands and help
	page URLs to "credential" and add new credential type fields / columns.
	Use new type abbreviations.
